# sample_cmake_project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
apps/: CMakeLists.txt
apps/gpio/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  Doxyfile.in
include/: cpu_tester.h  gpio_tester.h  peripheral_tester.h
include/sample_cmake_project/: sample_cmake_project.h
libs/: CMakeLists.txt
libs/cpu/: CMakeLists.txt  cpu_tester.cpp
libs/gpio/: CMakeLists.txt  gpio_tester.cpp
scripts/: build.sh  format.sh  test.sh
src/: CMakeLists.txt  sample_cmake_project.cpp
tests/: CMakeLists.txt  test_sample_cmake_project.cpp
tests/gpio/: CMakeLists.txt  test_gpio_tester.cpp
